--- a/style/styles.css
+++ b/style/styles.css
@@ -29,7 +29,39 @@ html, body{
     margin: 2em 2em 2% 2%;
 }
 .roles{
-    margin-left: 1em;
+    margin-left: 0.5em;
+}
+
+.game-content{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin: 2em 2em 2% 2%;
+    grid-template-areas: 
+    "gameplay description"
+    "screenshots description"
+}
+.gameplay{
+    /*align-self: center;*/
+    grid-area: gameplay;
+    border: dashed;
+}
+
+.one-liner{
+    grid-area: description;
+    border: dashed;
+}
+.features{
+    grid-area: description;
+}
+.screenshots{
+    display: flex;
+    flex-flow: column wrap;
+    border:dashed;
+    grid-area: screenshots;
+    object-fit: cover;
+}
+.gifs{
+    object-fit: cover;
 }
 
 a{
