--- a/style/styles.css
+++ b/style/styles.css
@@ -1,10 +1,12 @@
 :root{
     --red: #F24236;
     --lightBlue: #AEECEF;
-    --white: #FFE3DC;
+    /*--white: #FFE3DC;*/
+    --white: #fff;
     --pink: #FF5D73;
     --black: #333333;
     --blackTranslucent: #33333332;
+    --redTranslucent: #f2433646;
 
 }
 
@@ -35,25 +37,39 @@ th, td {
 }
 
 
+
 .nav{
     background-color: var(--red);
     margin: 0px;
     padding: 0px;
+    width: 100%;
+    position: fixed;
+    z-index: 99;
+    border-bottom:inset;
+    border-width: 2px;
+    border-color: var(--black);
 }
 .main-container{
     width: 1400px;
     margin: 0 auto;
+    padding: 0 0 0 0;
+    
 }
 .back-button{
     margin-left: 1%;
     display:inline-block;
-    padding: 15px;;
+    padding: 10px;
+    transition: .5s ease;
 }
 .title{
-    /*margin: 2em 2em 2% 2%;*/
+    background-color: var(--red);
+    padding: 1em 0 1em 0;
 }
 .roles{
     margin-left: 0.5em;
+}
+.roles p{
+    color: var(--black);
 }
 
 .game-content{
@@ -64,18 +80,14 @@ th, td {
     grid-template-columns: 1fr 1.2fr;
     grid-gap: 2em;
     margin-top: 2em;
+    padding: 0 15px 0 15px;
 }
 .gameplay{
     /*align-self: center;*/
     grid-area: gameplay;
 }
 
-.one-liner{
-    
-}
-.features{
-    
-}
+
 .description{
     grid-area: description;
 }
@@ -89,13 +101,55 @@ th, td {
     max-width: 100%;
     padding-top: 1em;
 }
-.gifs{
-}
+
 .gifs img{
     object-fit: cover;
     max-width: 85%;
 }
 
+#except-nav{
+    background-color: var(--black);
+    top:3em;
+    position: relative;
+}
+
+.intro{
+    padding: 250px 0 0 0;
+}
+#portfolio{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-auto-rows: 320px;
+}
+.project{
+    justify-self:center;
+    position: relative;
+}
+.project img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin: auto;
+}
+#about-wrapper{
+    display: flex;
+    flex-flow: column wrap;
+    row-gap: 250px;
+    border:dashed;
+}
+.project .overlay{
+    position: absolute;
+    transition: .5s ease;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-color: var(--redTranslucent);
+}
+
+.project:hover .overlay{
+    opacity: 1;
+}
 a{
 	text-decoration: none;
 }
@@ -112,7 +166,7 @@ h1, h2, h3, h4, h5, h6, strong{
     padding: 0;
 }
 p{
-    color: var(--black);
+    color: var(--white);
 	font-family: 'Ubuntu Mono', monospace;
 	font-weight: 400;
     margin: 0;
@@ -134,14 +188,14 @@ th, td{
 }
 td img{
     max-width: 100%;
-    object-fit: cover;
+    object-fit: fill;
 }
 
 th{
-    color: var(--red);
+    color: var(--black);
     font-weight: 500;
     text-align: left;
-    background-color: var(--black);
+    background-color: var(--red);
 }
 
 thead th:nth-child(1) {
