--- a/style/styles.css
+++ b/style/styles.css
@@ -159,9 +159,10 @@ th, td {
     background-color: var(--redTranslucent);
 }
 .project .overlay h3{
-    margin-top: 4em;
+    margin-top: 1em;
+    text-align: center;
+    font-size: 60px;
 }
-
 .project:hover .overlay{
     opacity: 1;
 }
@@ -224,7 +225,7 @@ thead th:nth-child(3) {
     width: 30%;
 }
 tbody tr:nth-child(odd) {
-    background-color: var(--white);
+    background-color: var(--pink);
 }
   
 tbody tr:nth-child(even) {
