--- a/style/styles.css
+++ b/style/styles.css
@@ -77,7 +77,7 @@ th, td {
     display: grid;
     grid-template-areas: 
     "gameplay description"
-    "screenshots description";
+    "screenshots screenshots";
     grid-template-columns: 1fr 1.2fr;
     grid-gap: 2em;
     margin-top: 2em;
@@ -86,24 +86,28 @@ th, td {
 .gameplay{
     /*align-self: center;*/
     grid-area: gameplay;
+    margin-top:auto;
+    margin-bottom: auto;
+    /*max-width: 50%;*/
 }
 
 
 .description{
     grid-area: description;
-    border-style: dotted;
 }
 .screenshots{
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: row wrap;
+    justify-content: space-around;
     grid-area: screenshots;
+    /*margin: auto;*/
 }
 .screenshots img{
     object-fit: cover;
+    /*grid-area: screenshots;*/
     max-width: 100%;
     padding-top: 1em;
 }
-
 .gifs img{
     object-fit: cover;
     max-width: 85%;
